# dex-prototype

./: .gitignore  Beaker.toml  Cargo.toml
contracts/auraswap-factory/: Cargo.toml  README.md
contracts/auraswap-factory/src/: contract.rs  state.rs  testing.rs
contracts/auraswap-pair/: Cargo.toml  README.md
contracts/auraswap-pair/src/: contract.rs  state.rs  testing.rs
contracts/auraswap-router/: Cargo.toml  README.md
contracts/auraswap-router/src/: contract.rs  operations.rs  state.rs
contracts/auraswap-router/src/testing/: tests.rs
contracts/auraswap-token/: Cargo.toml  README.md
contracts/auraswap-token/src/: contract.rs
scripts/: contractCodeIDs.json  instantiate.js  store.js
scripts/swap/: factory_instantiate.js  factory_store.js  pair_instantiate.js  pair_store.js  router_instantiate.js  router_store.js  router_swap.js  token_store.js
scripts/swap/config/: deployment_info.json
ts/sdk/: README.md  package.json  typedoc.json
